@@ -11,7 +11,6 @@ release_tests = 1
 installer     = ModuleBuild
 copy_mb       = 1
 allow_dirty   = Build.PL
-allow_dirty   = cpanfile
 diag          = +Alien::Base
 diag          = +PkgConfig
 irc           = irc://irc.perl.org/#native
@@ -111,7 +110,6 @@ Alien::FFI = 0.12
 ExtUtils::CBuilder = 0
 Config::AutoConf = 0.309
 FFI::CheckLib = 0.05
-JSON::PP = 0
 
 [Prereqs / TestPrereqs]
 -phase = test
